Fix forgotten dash

--- a/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
+++ b/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
@@ -31,7 +31,7 @@
                         <Label.FormattedText>
                             <FormattedString>
                                 <Span Text="{Binding FullName}" />
-                                <Span Text=" " />
+                                <Span Text=" - " />
                                 <Span Text="{Binding NumberOfTimesChosen}" />
                             </FormattedString>
                         </Label.FormattedText>
